force-app/main/default/objects/CWS_Renewal_Batch_Status__c/CWS_Renewal_Batch_Status__c.object-meta.xml
<CustomObject>
    <description>Object to store the list of Contracts to be reprocessed by the CWS_RenewalBatch class. Contracts belonging to the Same account would be processed if no other Jobs pending to update the contracts is in Progress.</description>
    <label>Renewal Batch Status</label>
    <nameField>
        <displayFormat>REN-{0000}</displayFormat>
        <label>Renewal Batch Processor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Batch Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>