force-app/main/default/objects/CWS_Renewal_Batch_Status__c/fields/CWS_ContractId__c.field-meta.xml
<CustomField>
    <fullName>CWS_ContractId__c</fullName>
    <description>ContractId Processed by the Batch Class</description>
    <externalId>true</externalId>
    <label>ContractId</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>