force-app/main/default/objects/CWS_Renewal_Batch_Status__c/fields/CWS_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>CWS_Error_Message__c</fullName>
    <description>Error Message when creating renewal opportunity/quote.</description>
    <inlineHelpText>Error Message when creating renewal opportunity/quote.</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>