force-app/main/default/objects/CWS_Renewal_Batch_Status__c/fields/CWS_JobId__c.field-meta.xml
<CustomField>
    <fullName>CWS_JobId__c</fullName>
    <description>Job Id of the Renewal Job</description>
    <inlineHelpText>Job Id of the Renewal Job</inlineHelpText>
    <label>JobId</label>
    <length>90</length>
    <type>Text</type>
</CustomField>