force-app/main/default/objects/CWS_Renewal_Batch_Status__c/fields/CWS_JobStatus__c.field-meta.xml
<CustomField>
    <fullName>CWS_JobStatus__c</fullName>
    <description>Status of the Renewal Batch Processing staging record.</description>
    <inlineHelpText>Status of the Renewal Batch Processing staging record.</inlineHelpText>
    <label>Job Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>