force-app/main/default/objects/CWS_Renewal_Batch_Status__c/fields/CWS_Processed__c.field-meta.xml
<CustomField>
    <fullName>CWS_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to Indicate that if a Record is Processed already by the batch</description>
    <inlineHelpText>Flag to Indicate that if a Record is Processed already by the batch</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>