force-app/main/default/objects/CWS_Renewal_Batch_Status__c/fields/CWS_RecordJobId__c.field-meta.xml
<CustomField>
    <fullName>CWS_RecordJobId__c</fullName>
    <description>RecordJobId corresponding to this Renewal Batch Status.</description>
    <inlineHelpText>RecordJobId corresponding to this Renewal Batch Status.</inlineHelpText>
    <label>RecordJobId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>